# KAOS-Android

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/arm64-v8a/: portal_daemon
app/src/main/assets/armeabi-v7a/: portal_daemon
app/src/main/cpp/: CMakeLists.txt  portal_daemon.cpp  portal_emulator.cpp  rijndael.c  rijndael.h  skylander_crypto.c  skylander_crypto.h
app/src/main/java/com/kaos/portalemulator/: DumpFileAdapter.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
